# WinThemeSwitcher

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Project Plan_ Windows 11 25H2 Theme Switcher Tray App.md  README.md  WinThemeSwitcher-publisher.cer  research_findings.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
